force-app/main/default/objects/order__c/order__c.object-meta.xml
<CustomObject>
    <label>orders</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>