force-app/main/default/objects/order__c/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <description>Used as a click to dial field for Natterbox 
Updated by process builder from Accounts phone field</description>
    <label>Account Phone</label>
    <type>Phone</type>
</CustomField>