force-app/main/default/objects/order__c/fields/Account_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Account_phone_number__c</fullName>
    <description>Points to mobile if there is a mobile if not then will pull regular phone field from account</description>
    <formula>IF( 
    NOT(ISBLANK(Account__r.PersonContact.MobilePhone)),
    Account__r.PersonContact.MobilePhone,
    (Account__r.Phone)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account phone number</label>
    <type>Text</type>
</CustomField>