force-app/main/default/objects/order__c/fields/AccountOrderRef__c.field-meta.xml
<CustomField>
    <fullName>AccountOrderRef__c</fullName>
    <description>To be used for Zapier Integration</description>
    <formula>Account__r.Id+&apos;-&apos;+Name</formula>
    <label>AccountOrderRef</label>
    <type>Text</type>
</CustomField>