force-app/main/default/objects/order__c/fields/AdditionOptionsHTML__c.field-meta.xml
<CustomField>
    <fullName>AdditionOptionsHTML__c</fullName>
    <label>AdditionOptionsHTML</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>