force-app/main/default/objects/order__c/fields/ae__c.field-meta.xml
<CustomField>
    <fullName>ae__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 3 AND (2 OR 4)</booleanFilter>
        <filterItems>
            <field>AE_SB__c.Type__c</field>
            <operation>equals</operation>
            <value>Arrive Early</value>
        </filterItems>
        <filterItems>
            <field>AE_SB__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>AE_SB__c.order_filter__c</field>
            <operation>contains</operation>
            <valueField>$Source.order_record_type_name__c</valueField>
        </filterItems>
        <filterItems>
            <field>AE_SB__c.Option__c</field>
            <operation>equals</operation>
            <valueField>$Source.Options__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>order (AE)</relationshipLabel>
    <relationshipName>orderAe</relationshipName>
    <type>Lookup</type>
</CustomField>