force-app/main/default/objects/order__c/fields/AE_Accom_Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>AE_Accom_Quote_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Accom Quote Request</label>
    <type>Checkbox</type>
</CustomField>