force-app/main/default/objects/order__c/fields/AE_City__c.field-meta.xml
<CustomField>
    <fullName>AE_City__c</fullName>
    <formula>ae__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE City</label>
    <type>Text</type>
</CustomField>