force-app/main/default/objects/order__c/fields/AE_Commission__c.field-meta.xml
<CustomField>
    <fullName>AE_Commission__c</fullName>
    <label>AE Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>