force-app/main/default/objects/order__c/fields/ae_date__c.field-meta.xml
<CustomField>
    <fullName>ae_date__c</fullName>
    <label>AE Date</label>
    <type>Date</type>
</CustomField>