force-app/main/default/objects/order__c/fields/AE_Qty_Commission__c.field-meta.xml
<CustomField>
    <fullName>AE_Qty_Commission__c</fullName>
    <formula>AE_Commission__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Qty Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>