force-app/main/default/objects/order__c/fields/AE_Qty_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>AE_Qty_Net_Price__c</fullName>
    <formula>ae_qty_price__c - AE_Qty_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Qty Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>