force-app/main/default/objects/order__c/fields/ae_qty_price__c.field-meta.xml
<CustomField>
    <fullName>ae_qty_price__c</fullName>
    <formula>ae_line_price__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>