force-app/main/default/objects/order__c/fields/agency_id__c.field-meta.xml
<CustomField>
    <fullName>agency_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>order (Agency Id)</relationshipLabel>
    <relationshipName>order1</relationshipName>
    <type>Lookup</type>
</CustomField>