force-app/main/default/objects/order__c/fields/Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address__c</fullName>
    <label>Agent Address</label>
    <type>TextArea</type>
</CustomField>