force-app/main/default/objects/order__c/fields/Agent_Image__c.field-meta.xml
<CustomField>
    <fullName>Agent_Image__c</fullName>
    <label>Agent Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>