force-app/main/default/objects/order__c/fields/agent_name__c.field-meta.xml
<CustomField>
    <fullName>agent_name__c</fullName>
    <description>(TC + NRMA)</description>
    <label>Consultant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>