force-app/main/default/objects/order__c/fields/Agent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone_Number__c</fullName>
    <label>Agent Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>