force-app/main/default/objects/order__c/fields/Agent_State__c.field-meta.xml
<CustomField>
    <fullName>Agent_State__c</fullName>
    <description>Used for reporting - updated from Agent State field</description>
    <label>Agent State</label>
    <length>12</length>
    <type>Text</type>
</CustomField>