force-app/main/default/objects/order__c/fields/airline_upgrade__c.field-meta.xml
<CustomField>
    <fullName>airline_upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Upgrade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.deal__c</field>
            <operation>equals</operation>
            <valueField>airline_upgrade__c.Deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>airline_upgrade__c.order_filter__c</field>
            <operation>contains</operation>
            <valueField>$Source.order_record_type_name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>airline_upgrade__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>