force-app/main/default/objects/order__c/fields/Airline_Upgrade_Commission__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade_Commission__c</fullName>
    <label>Airline Upgrade Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>