force-app/main/default/objects/order__c/fields/airline_upgrade_line_price__c.field-meta.xml
<CustomField>
    <fullName>airline_upgrade_line_price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Airline Upgrade Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>