force-app/main/default/objects/order__c/fields/Airline_Upgrade_Qty_Commission__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade_Qty_Commission__c</fullName>
    <formula>Airline_Upgrade_Commission__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airline Upgrade Qty Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>