force-app/main/default/objects/order__c/fields/Airline_Upgrade_Qty_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade_Qty_Net_Price__c</fullName>
    <formula>airline_upgrade_qty_price__c - Airline_Upgrade_Qty_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airline Upgrade Qty Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>