force-app/main/default/objects/order__c/fields/airline_upgrade_qty_price__c.field-meta.xml
<CustomField>
    <fullName>airline_upgrade_qty_price__c</fullName>
    <formula>airline_upgrade_line_price__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airline Upgrade Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>