force-app/main/default/objects/order__c/fields/allocation_status__c.field-meta.xml
<CustomField>
    <fullName>allocation_status__c</fullName>
    <inlineHelpText>Allocation should always be &quot;Secured&quot; unless the the Order Status is Cancelled or Expired.</inlineHelpText>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured</fullName>
                <default>true</default>
                <label>Secured</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>