force-app/main/default/objects/order__c/fields/amount_outstanding__c.field-meta.xml
<CustomField>
    <fullName>amount_outstanding__c</fullName>
    <formula>grand_total__c - total_payment_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>