force-app/main/default/objects/order__c/fields/AP_Deal_has_flights__c.field-meta.xml
<CustomField>
    <fullName>AP_Deal_has_flights__c</fullName>
    <description>Initially used for AP processes</description>
    <formula>deal__r.has_flights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal has flights</label>
    <type>Checkbox</type>
</CustomField>