force-app/main/default/objects/order__c/fields/AP_Purchase_Confirmation_Resend__c.field-meta.xml
<CustomField>
    <fullName>AP_Purchase_Confirmation_Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to RESEND the Order Confirmation email for a deal with FLIGHTS</inlineHelpText>
    <label>Resend Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>