force-app/main/default/objects/order__c/fields/AP_Set_order_confirmed_STAMPED__c.field-meta.xml
<CustomField>
    <fullName>AP_Set_order_confirmed_STAMPED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in WFR stamp PC time
this checkbox ensures that can only happen once</description>
    <label>AP Set order confirmed STAMPED</label>
    <type>Checkbox</type>
</CustomField>