force-app/main/default/objects/order__c/fields/Approved_to_Run_Under_Mins__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Run_Under_Mins__c</fullName>
    <formula>departures_dates__r.Approved_to_Run_Under_Mins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved to Run Under Mins</label>
    <type>Checkbox</type>
</CustomField>