force-app/main/default/objects/order__c/fields/archetype__c.field-meta.xml
<CustomField>
    <fullName>archetype__c</fullName>
    <formula>CASE( order_record_type_name__c,
  &quot;TAD&quot;,
  IF(ISBLANK(coach_colour__c),
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot;,
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot; &amp; &quot;_&quot; &amp; coach_colour__c
  ),
  &quot;TC&quot;,
  IF(ISBLANK(coach_colour__c),
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot;,
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot; &amp; &quot;_&quot; &amp; coach_colour__c
  ),
 &quot;TNZ&quot;,
  IF(ISBLANK(coach_colour__c),
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TNZ&quot;,
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TNZ&quot; &amp; &quot;_&quot; &amp; coach_colour__c
  ),
 &quot;WT&quot;,
  IF(ISBLANK(coach_colour__c),
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TNZ&quot;,
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TNZ&quot; &amp; &quot;_&quot; &amp; coach_colour__c
  ),
  IF(ISBLANK(coach_colour__c),
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot;,
  Sub_Options__r.Id &amp; &quot;_&quot; &amp; &quot;TAD&quot; &amp; &quot;_&quot; &amp; coach_colour__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archetype</label>
    <type>Text</type>
</CustomField>