force-app/main/default/objects/order__c/fields/AwaitingNewPPRollup__c.field-meta.xml
<CustomField>
    <fullName>AwaitingNewPPRollup__c</fullName>
    <label>Awaiting New PP Rollup</label>
    <summaryFilterItems>
        <field>customer__c.Pif_Statuses__c</field>
        <operation>equals</operation>
        <value>Not completed</value>
    </summaryFilterItems>
    <summaryForeignKey>customer__c.order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>