force-app/main/default/objects/order__c/fields/bc_email_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>bc_email_sent_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Email Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>