force-app/main/default/objects/order__c/fields/BC_Sent__c.field-meta.xml
<CustomField>
    <fullName>BC_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Sent</label>
    <type>Checkbox</type>
</CustomField>