force-app/main/default/objects/order__c/fields/BER_Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>BER_Coupon_Amount__c</fullName>
    <label>BER Coupon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>