force-app/main/default/objects/order__c/fields/BER_Coupon_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>BER_Coupon_Expiry_Date__c</fullName>
    <label>BER Coupon Expiry Date</label>
    <type>Date</type>
</CustomField>