force-app/main/default/objects/order__c/fields/BER_Helper__c.field-meta.xml
<CustomField>
    <fullName>BER_Helper__c</fullName>
    <formula>IF( Flights_Ticketed__c ,&apos;HasFlightsTicketed&apos;,&apos;NoFlightsTicketed&apos;)&amp;&apos; / &apos;&amp; 
IF( Flights_ticketed_by_UJ__c  ,&apos;IsUJ&apos;,&apos;NotUJ&apos;)&amp;&apos; / &apos;&amp;
IF( Cruise__c ,  IF( Cabins_Booked__c &gt; 0,&apos;HasCruiseBooked&apos;, &apos;HasCruise&apos;) ,&apos;NoCruise&apos;)&amp;&apos; / &apos;&amp; 
IF( Order_Customisation_Count__c &gt;0,&apos;HasCusto&apos;,&apos;NoCusto&apos;)&amp;&apos; / &apos;&amp; 
IF( Total_Payments__c  &gt;0,&apos;HasPayment&apos;,&apos;NoPayment&apos;)&amp;&apos; / &apos;&amp; 
IF( COVID_Prepayments_Count__c &gt;0,&apos;HasPrepayments&apos;, &apos;NoPrepayments&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BER Helper</label>
    <type>Text</type>
</CustomField>