force-app/main/default/objects/order__c/fields/BER_Offer_Balance__c.field-meta.xml
<CustomField>
    <fullName>BER_Offer_Balance__c</fullName>
    <formula>total_payment_received__c +   total_discounts__c  - ( BER_Refund_Amount__c +  BER_Coupon_Amount__c +  BER_Withholding_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BER Offer Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>