force-app/main/default/objects/order__c/fields/BNCDL__c.field-meta.xml
<CustomField>
    <fullName>BNCDL__c</fullName>
    <formula>departures_dates__r.BNCDL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNCDL</label>
    <type>Checkbox</type>
</CustomField>