force-app/main/default/objects/order__c/fields/BNCDL_BBD__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_BBD__c</fullName>
    <formula>IF(  BNCDL__c ,  deal__r.BNCDL_BBD__c,NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNCDL BBD</label>
    <type>Date</type>
</CustomField>