force-app/main/default/objects/order__c/fields/booking_status__c.field-meta.xml
<CustomField>
    <fullName>booking_status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>VCC Created</fullName>
            </value>
            <value>
                <fullName>VCC Redeemed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>