force-app/main/default/objects/order__c/fields/Booking_Validation__c.field-meta.xml
<CustomField>
    <fullName>Booking_Validation__c</fullName>
    <label>Booking Validation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Confirmation Needed</fullName>
            </value>
            <value>
                <fullName>Partner Confirmation Completed</fullName>
            </value>
            <value>
                <fullName>Cabin - Book</fullName>
            </value>
            <value>
                <fullName>Cabin Paid</fullName>
            </value>
            <value>
                <fullName>Cabin Completed</fullName>
            </value>
            <value>
                <fullName>Not In Date Range For Ticketing</fullName>
            </value>
            <value>
                <fullName>Ticket Flight</fullName>
            </value>
            <value>
                <fullName>Flight Ticketed</fullName>
            </value>
            <value>
                <fullName>Ticket Archive Due</fullName>
            </value>
            <value>
                <fullName>Flight Collateral Archived</fullName>
            </value>
            <value>
                <fullName>Travel Collateral Prep Stage</fullName>
            </value>
            <value>
                <fullName>Travel Pack Sent</fullName>
            </value>
            <value>
                <fullName>30 Day Partner Share Due</fullName>
            </value>
            <value>
                <fullName>Travelled</fullName>
            </value>
            <value>
                <fullName>Stay - No Booking Required</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>