force-app/main/default/objects/order__c/fields/BSB_ZIP_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>BSB_ZIP_Payment_Pending__c</fullName>
    <label>BSB/ZIP Payment Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZIP</fullName>
            </value>
            <value>
                <fullName>BSB</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>