force-app/main/default/objects/order__c/fields/Cabin_Bookings_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Bookings_Outstanding__c</fullName>
    <formula>Cabins_Required__c -  Cabins_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabin Bookings Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>