force-app/main/default/objects/order__c/fields/Cabins_Booked__c.field-meta.xml
<CustomField>
    <fullName>Cabins_Booked__c</fullName>
    <label>Cabins Booked</label>
    <summaryForeignKey>Cruise_Cabin_Booking__c.order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>