force-app/main/default/objects/order__c/fields/Cabins_Pending__c.field-meta.xml
<CustomField>
    <fullName>Cabins_Pending__c</fullName>
    <formula>IF( status__c = &apos;On Hold&apos;,IF( Solo_Price__c &gt; 0, qty__c , (qty__c/2)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabins Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>