force-app/main/default/objects/order__c/fields/Cabins_Required__c.field-meta.xml
<CustomField>
    <fullName>Cabins_Required__c</fullName>
    <formula>IF( 
OR(ISPICKVAL(order_status__c, &apos;Confirmed&apos;),ISPICKVAL(order_status__c, &apos;Exported&apos;) ,ISPICKVAL(order_status__c, &apos;Ready For Export&apos;)),
IF(  solo_traveller__c ,  
 qty__c  ,
IF(
MOD(PAX_Travelling__c,2) = 0,
(PAX_Travelling__c/2),
(PAX_Travelling__c - 1)/2
)
)
,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabins Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>