force-app/main/default/objects/order__c/fields/Call_Back_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Status__c</fullName>
    <label>Call Back Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Back_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quote Required</fullName>
            </value>
            <value>
                <fullName>Information Required</fullName>
            </value>
            <value>
                <fullName>Existing Order Issue</fullName>
            </value>
            <value>
                <fullName>Ready to Process</fullName>
            </value>
            <value>
                <fullName>Voicemail Left</fullName>
            </value>
            <value>
                <fullName>No Voicemail Available</fullName>
            </value>
            <value>
                <fullName>Information Provided</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>