force-app/main/default/objects/order__c/fields/Call_Back_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Type__c</fullName>
    <label>Call Back Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>