force-app/main/default/objects/order__c/fields/Cancellation_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request__c</fullName>
    <label>Cancellation Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Send Request Form</fullName>
            </value>
            <value>
                <fullName>Request Sent</fullName>
            </value>
            <value>
                <fullName>Request Actioned</fullName>
            </value>
            <value>
                <fullName>Form Returned Pending Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>