force-app/main/default/objects/order__c/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <inlineHelpText>Date/time that Cancellation Request form sent</inlineHelpText>
    <label>Cancellation Request Date</label>
    <type>DateTime</type>
</CustomField>