force-app/main/default/objects/order__c/fields/Cancelled_Migrated_TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Migrated_TAD_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled Migrated TAD Order</label>
    <type>Checkbox</type>
</CustomField>