force-app/main/default/objects/order__c/fields/coach_colour__c.field-meta.xml
<CustomField>
    <fullName>coach_colour__c</fullName>
    <label>Coach Colour</label>
    <length>12</length>
    <type>Text</type>
</CustomField>