force-app/main/default/objects/order__c/fields/confirmation_email_sent__c.field-meta.xml
<CustomField>
    <fullName>confirmation_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is Order Confirmation email for a deal with NO Flights</inlineHelpText>
    <label>Purchase Conf Email Sent (No Flights)</label>
    <type>Checkbox</type>
</CustomField>