force-app/main/default/objects/order__c/fields/confirmed__c.field-meta.xml
<CustomField>
    <fullName>confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>