force-app/main/default/objects/order__c/fields/Consultant_Email2__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Email2__c</fullName>
    <formula>Consultants__r.Email_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultant Email</label>
    <type>Text</type>
</CustomField>