force-app/main/default/objects/order__c/fields/Consultants__c.field-meta.xml
<CustomField>
    <fullName>Consultants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultants</label>
    <referenceTo>Agents__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>