force-app/main/default/objects/order__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <formula>Account__r.PersonContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID</label>
    <type>Text</type>
</CustomField>