force-app/main/default/objects/order__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <label>Coupon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>