force-app/main/default/objects/order__c/fields/Coupon_Aggregate_Used__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Aggregate_Used__c</fullName>
    <description>Uses Rollup Helper. Rolls up aggregate used field on Coupon(Original)</description>
    <label>Coupon Aggregate Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>