force-app/main/default/objects/order__c/fields/Coupon_Dep_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Dep_Date__c</fullName>
    <label>Coupon Dep Date</label>
    <type>Date</type>
</CustomField>