force-app/main/default/objects/order__c/fields/Coupon_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Expiry_Date__c</fullName>
    <label>Coupon Expiry Date</label>
    <type>Date</type>
</CustomField>