force-app/main/default/objects/order__c/fields/CouponCreated__c.field-meta.xml
<CustomField>
    <fullName>CouponCreated__c</fullName>
    <label>CouponCreated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>