force-app/main/default/objects/order__c/fields/couponused__c.field-meta.xml
<CustomField>
    <fullName>couponused__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>coupon</label>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>